--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/vite/$1" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "next-api/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "next-api/$1"
+    }
   ]
-}
+} 
