--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
     {
       "src": "next-api/package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "vite/package.json",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
+    {
+      "src": "/vite/(.*)",
+      "dest": "vite/dist/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "next-api/$1"
