--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -9,9 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.10.0",
     "element-plus": "^2.10.4",
-    "vue": "^3.5.17"
+    "fabric": "^6.7.0",
+    "msgpack-lite": "^0.1.26",
+    "pinia": "^3.0.3",
+    "socket.io-client": "^4.8.1",
+    "vue": "^3.5.17",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
