--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -31,8 +31,8 @@
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.4.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -40,16 +40,16 @@
     "less": "^4.2.0",
     "nprogress": "^0.2.0",
     "prettier": "^3.0.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.8.3",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.25.1",
-    "vite": "^4.4.5",
+    "vite": "^5.2.10",
     "vue-svg-icon": "^1.2.9",
-    "vue-tsc": "^1.8.5",
+    "vue-tsc": "^3.0.3",
     "vuex": "^4.1.0"
   },
-  "description": "This template should help get you started developing with Vue 3 and TypeScript in Vite. The template uses Vue 3 `<script setup>` SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
+  "description": "This template should help get you started developing with Vue 3 and TypeScript in Vite. The template uses Vue 3 <script setup> SFCs, check out the [script setup docs](https://v3.vuejs.org/api/sfc-script-setup.html#sfc-script-setup) to learn more.",
   "main": "index.js",
   "keywords": [],
   "author": "",
