--- a/vite-app/tsconfig.json
+++ b/vite-app/tsconfig.json
@@ -14,6 +14,7 @@
       "DOM",
       "DOM.Iterable"
     ],
+    "types": ["vite/client"],
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "node",
