--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.5.0",
-    "element-plus": "^2.3.12",
+    "element-plus": "^2.10.4",
     "html2canvas": "^1.4.1",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -27,6 +27,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^20.14.2",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
