--- a/vite-app/tsconfig.json
+++ b/vite-app/tsconfig.json
@@ -14,7 +14,7 @@
       "DOM",
       "DOM.Iterable"
     ],
-    "types": ["vite/client"],
+    "types": ["vite/client", "node"],
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "node",
