--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,12 @@
-API_KEY=abc123xyz
+# 服务器配置
+PORT=9527
+NODE_ENV=development
+
+# API 配置
+NEXT_PUBLIC_API_BASE_URL=http://localhost:9527/api
+
+# 数据库配置（如果需要）
+MONGODB_URI='mongodb+srv://an31742:212314@cluster0.2xk4dyf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+# 其他环境变量
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:5173
