--- a/.env.local
+++ b/.env.local
@@ -10,3 +10,16 @@ MONGODB_URI='mongodb+srv://an31742:212314@cluster0.2xk4dyf.mongodb.net/?retryWri
 
 # 其他环境变量
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:5173
+
+# JWT配置
+JWT_SECRET=admin_secret_key_2025_07_20
+
+# API配置
+NEXT_PUBLIC_API_URL=http://localhost:9527
+
+# 用户配置
+ADMIN_USERNAME=admin
+CURRENT_USER=admin
+
+# 时间配置
+TIMEZONE=UTC
