--- a/vite-app/tsconfig.json
+++ b/vite-app/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ],
+      "@/*": ["src/*"]  // 这里必须配置
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
