--- a/next-api/tsconfig.json
+++ b/next-api/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["app/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/lib/Streaming/mockData"],
   "exclude": ["node_modules"]
 }
