--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/next-api/app/api/$1" },
-    { "source": "/(.*)", "destination": "/vite-app/$1" }
+  "builds": [
+    {
+      "src": "vite-app/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
   ]
 } 
