--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
-  "builds": [
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/next-api/app/api/$1" },
+    { "source": "/(.*)", "destination": "/vite-app/$1" }
+  ],
+  "projects": [
+    {
+      "src": "next-api/package.json",
+      "use": "@vercel/next"
+    },
     {
       "src": "vite-app/package.json",
       "use": "@vercel/static-build",
