--- a/next-api/package.json
+++ b/next-api/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^9.40.0",
+    "@sentry/replay": "^7.116.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
