优化配置冲突

--- a/next-api/tsconfig.json
+++ b/next-api/tsconfig.json
@@ -16,6 +16,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "strict": false,
     "types": [
       "jest",
       "node"
