--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,13 @@
 {
+   "builds": [
+    {
+      "src": "vite-app/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],  
   "rewrites": [
     {
       "source": "/api/(.*)",
