--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",                     
-      "destination": "/next-api/app/api/$1"
+      "destination": "/next-api/app/$1"
     },
     {
       "source": "/streaming/(.*)",               
