--- a/vercel.json
+++ b/vercel.json
@@ -9,17 +9,13 @@
     }
   ],  
   "rewrites": [
-    {
-      "source": "/api/(.*)",                     
-      "destination": "/next-api/app/$1"
+     {
+      "source": "/api/(.*)",
+      "destination": "/next-api/app/api/$1"
     },
     {
       "source": "/streaming/(.*)",               
       "destination": "/next-api/app/streaming/$1"
-    },
-    {
-      "source": "/next-api/(.*)",                  
-      "destination": "/next-api/$1"
     },
     {
       "source": "/(.*)",                       
