fix:/api/(.*) 规则后添加 /next-api/*

--- a/vercel.json
+++ b/vercel.json
@@ -13,18 +13,10 @@
     }
   ],  
   "rewrites": [
-     {
-      "source": "/api/(.*)",
-      "destination": "/next-api/app/api/$1"
-    },
-    {
-      "source": "/streaming/(.*)",               
-      "destination": "/next-api/app/streaming/$1"
-    },
-    {
-      "source": "/(.*)",                       
-      "destination": "/vite-app/$1"
-    }
+     {"source": "/api/(.*)", "destination": "/next-api/app/api/$1"},
+     {"source": "/streaming/(.*)", "destination": "/next-api/app/streaming/$1"},
+     {"source": "/next-api/(.*)", "destination": "/next-api/$1"},
+     {"source": "/(.*)", "destination": "/vite-app/$1"}
   ],
   "headers": [
     {
