--- a/vite-app/tsconfig.json
+++ b/vite-app/tsconfig.json
@@ -5,15 +5,11 @@
     "paths": {
       "@/*": ["src/*"]  // 这里必须配置
     },
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
-    "types": ["vite/client", "node"],
+    "module": "ESNext",          // 启用ES模块支持
+    "moduleResolution": "Bundler", // 优化捆绑器场景的模块解析
+    "target": "ES2022",           // 匹配现代浏览器支持
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "types": ["vite/client", "node","three"],
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "node",
